# minuit2.net

./: .editorconfig  .gitignore  .gitmodules  Build.Windows.NinjaClang.targets  Build.Windows.VisualStudio.targets  Build.Windows.targets  Build.targets  CMakeLists.txt  DEVELOPMENT.md  Directory.Build.props  GitVersion.yml  LICENSE  NuGet.config  README.md  Readme.md  minuit2.net.sln  minuit2.net.sln.DotSettings  minuit2.net.slnx
.github/workflows/: build-and-pack.yml  github-action-build-wrapper.yml  minuit2-net-pipeline.yml
TestApplication/TestApplication/: Program.cs  TestApplication.csproj
minuit2.UnitTests/: Any_gradient_based_minimizer.spec.cs  Any_minimizer.spec.cs  Any_parameter_uncertainty_resolving_minimizer.spec.cs  Benchmarks.cs  Combined_minimizer.spec.cs  Cost_function_minimization.spec.cs  Cost_function_sum.spec.cs  Cost_function_sum_minimization.spec.cs  CubicPolynomial.cs  EnumerableExtensions.cs  EquivalencyAssertionOptionsExtensions.cs  ExceptionHandlingTests.cs  ExceptionThrowingFcn.cs  Hesse_error_calculator.spec.cs  LeastSquaresExtensions.cs  LeastSquaresTests.cs  Least_squares_cost_function.spec.cs  Least_squares_cost_function_with_batch_evaluation.spec.cs  Least_squares_cost_function_with_gauss_newton_approximation.spec.cs  MigradResultAssertions.cs  MigradTests.cs  Migrad_minimizer.spec.cs  Migrad_minimizer_construction.spec.cs  MinimizationResultAssertions.cs  MinimizationResultTests.cs  ParameterCovarianceMatrixExtensions.cs  Parameter_configuration.spec.cs  The_Migrad_minimizer.spec.cs  The_Simplex_minimizer.spec.cs  WrapperTests.cs  minuit2.UnitTests.csproj
minuit2.UnitTests/MinimizationProblems/: BellCurveLeastSquaresProblem.cs  ConfigurableLeastSquaresProblem.cs  ConfiguredProblem.cs  ConfiguredProblemExtensions.cs  CubicPolynomialLeastSquaresProblem.cs  ExponentialDecayLeastSquaresProblem.cs  IMinimizationProblem.cs  NumericalPendulumLeastSquaresProblem.cs  PreconfiguredProblem.cs  QuadraticPolynomialLeastSquaresProblem.cs
minuit2.UnitTests/TestUtilities/: Any.cs  AnyNumber.cs  ConfigurableLeastSquaresProblem.cs  CostFunctionExtensions.cs  CubicPolynomial.cs  CubicPolynomialLeastSquaresProblem.cs  EquivalencyAssertionOptionsExtensions.cs  EquivalencyOptionsExtensions.cs  GenericCollectionAssertionExtensions.cs  IMinimizationProblem.cs  LeastSquaresExtensions.cs  MaximumAccuracyMinimizerConfiguration.cs  MinimizationProblem.cs  MinimizationResultAssertionExtensions.cs  MinimizationResultAssertions.cs  ModelEvaluatingCostFunction.cs  NumericAssertionExtensions.cs  ObjectAssertionExtensions.cs  ParameterConfigurationExtensions.cs  ParameterCovarianceMatrixExtensions.cs  PreconfiguredProblem.cs  QuadraticPolynomial.cs  QuadraticPolynomialLeastSquaresProblem.cs  (+1 more)
minuit2.net/: AbortedMinimizationResult.cs  CMakeLists.txt  CancelledMinimizationResult.cs  ComponentCostFunction.cs  ComponentCostFunctionRequiringErrorDefinitionAdjustment.cs  CostFunction.cs  CostFunctionAdapter.cs  CostFunctionDerivativesGuard.cs  CostFunctionError.cs  CostFunctionException.cs  CostFunctionSum.cs  CostFunctionSumRequiringErrorDefinitionAdjustment.cs  CostFunctionValidation.cs  CostFunctionWrapper.cs  CppException.cs  DataPoint.cs  DataValidation.cs  EnumerableExtensions.cs  Exceptions.cs  GradientFunction.cs  HesseErrorCalculator.cs  IComposite.cs  ICompositeCostFunction.cs  ICompositeCostFunctionRequiringErrorDefinitionAdjustment.cs  ICostFunction.cs  ICostFunctionRequiringErrorDefinitionAdjustment.cs  ILeastSquares.cs  IMinimizationResult.cs  InvalidCostFunctionException.cs  LeastSquares.cs  LeastSquaresMinimizationResult.cs  LeastSquaresResult.cs  LeastSquaresSum.cs  LeastSquaresWithUniformYError.cs  LeastSquaresWithUnknownYError.cs  Migrad.cs  MigradMinimizer.cs  MigradMinimizerConfiguration.cs  MigradResult.cs  MinimizationAbort.cs  (+20 more)
minuit2.wrap/: CMakeLists.txt  FCNGradientBaseWrap.cpp  FCNGradientBaseWrap.h  FCNWrap.cpp  FCNWrap.h  FcnFacade.h  FcnFacadeWrapper.h  FunctionMinimumExtensions.h  MinimizationRunner.cpp  MinimizationRunner.h  Minuit2.i  MnApplicationWrap.h  MnHesseWrap.cpp  MnHesseWrap.h  MnMigradWrap.cpp  MnMigradWrap.h  MnMinimizeWrap.cpp  MnMinimizeWrap.h  MnSimplexWrap.cpp  MnSimplexWrap.h  NativeMinimizationFcn.cpp  NativeMinimizationFcn.h  OperationCancelledException.h  README.md  readme.MD  version.h  version.rc
msbuild/: Build.Windows.NinjaClang.targets  Build.Windows.VisualStudio.targets  Build.targets  MacOS.AppleClang.targets  NativeBuild.Windows.NinjaLLVM-MinGW.targets  NativeBuild.Windows.VisualStudio.targets  NativeBuild.Windows.targets  NativeBuild.targets  NativeCode.targets  Packaging.targets  PrepareRootSource.targets  Root.targets  Windows.NinjaClang.targets  Windows.NinjaLLVM-MinGW.targets  Windows.VisualStudio.targets  Windows.targets
(+165 files in other folders)
